--- a/src/assets/css/app.scss
+++ b/src/assets/css/app.scss
@@ -251,6 +251,7 @@ body:before {
                     background-color: #f1f2f6;
                     border-radius: 5px;
                     position: relative;
+                    white-space: pre-line;
 
                     &.me {
                         background-color: #b9c3cf;
@@ -321,6 +322,18 @@ body:before {
                             }
                         }
                     }
+
+                    .renderImage {
+                        width: 300px;
+                        background-position: center;
+                        background-repeat: no-repeat;
+                        background-size: contain;
+                        position: relative;
+
+                        img {
+                            width: 100%;
+                        }
+                    }
                 }
                 
                 &.me { margin-left: auto; justify-content: flex-end; }
@@ -329,20 +342,60 @@ body:before {
 
         .input {
             width: 100%;
-            height: 80px;
+            height: 50px;
             position: relative;
             padding: 5px;
             float: left;
             margin-top: 10px;
 
-            input {
-                width: 100%;
-                height: 80px;
+            .options-message {
+                width: 150px;
+                height: 50px;
+                margin-right: 10px;
+                float: left;
+                display: flex;
+                justify-content: flex-start;
+                align-items: center;
+
+                button {
+                    border-radius: 50%;
+
+                    &:not(:last-of-type) {
+                        margin-right: 10px;
+                    }
+
+                    &:hover {
+                        color: #686de0;
+                        background-color: rgba(0, 0, 0, .2);
+                    }
+                }
+            }
+
+            textarea {
+                width: calc(100% - 220px);
+                height: 50px;
                 background-color: $background;
                 padding: 10px;
                 border: none;
                 border-radius: 5px;
                 color: rgba(255, 255, 255, .7);
+                resize: none;
+                float: left;
+            }
+
+            button {
+                border: none;
+                background: transparent;
+                color: rgba(255, 255, 255, .6);
+                font-size: 20px;
+                width: 40px;
+                height: 40px;
+
+                &.enter-message {
+                    float: right;
+                    margin-right: 10px;
+                    margin-top: 5px;
+                }
             }
         }
     }
